--- a/Solvency/solvencyPlot.ipynb
+++ b/Solvency/solvencyPlot.ipynb
@@ -57,16 +57,16 @@
     "plt.xlabel(\"Year\")\n",
     "plt.ylabel(\"Net Interest Cover Ratio\")\n",
     "\n",
-    "ax2 = ax.twinx()\n",
+    "# ax2 = ax.twinx()\n",
     "\n",
-    "ndcf_pru = ax2.plot(x_axis, solvency_ratios['PRU']['Net Debt to Cash Flow'], linestyle=\"dashed\", color = 'blue', label='PRU Net Debt to Cash Flow')\n",
+    "# ndcf_pru = ax2.plot(x_axis, solvency_ratios['PRU']['Net Debt to Cash Flow'], linestyle=\"dashed\", color = 'blue', label='PRU Net Debt to Cash Flow')\n",
     "\n",
     "\n",
-    "plt.ylabel(\"Net Debt to Cash Flow Ratio\")\n",
+    "# plt.ylabel(\"Net Debt to Cash Flow Ratio\")\n",
     "\n",
     "plt.title(\"Long Term Solvency Ratios - PRU\")\n",
     "\n",
-    "lns = nic_pru+ndcf_pru\n",
+    "lns = nic_pru#+ndcf_pru\n",
     "labs = [l.get_label() for l in lns]\n",
     "\n",
     "plt.legend(lns, labs, bbox_to_anchor=(1.15,1), loc=\"upper left\")\n",
@@ -100,16 +100,16 @@
     "plt.xlabel(\"Year\")\n",
     "plt.ylabel(\"Net Interest Cover Ratio\")\n",
     "\n",
-    "ax2 = ax.twinx()\n",
+    "# ax2 = ax.twinx()\n",
     "\n",
-    "ndcf_rrl = ax2.plot(x_axis, solvency_ratios['RRL']['Net Debt to Cash Flow'], linestyle=\"dashed\", color = 'red', label='RRL Net Debt to Cash Flow')\n",
+    "# ndcf_rrl = ax2.plot(x_axis, solvency_ratios['RRL']['Net Debt to Cash Flow'], linestyle=\"dashed\", color = 'red', label='RRL Net Debt to Cash Flow')\n",
     "\n",
     "\n",
-    "plt.ylabel(\"Net Debt to Cash Flow Ratio\")\n",
+    "# plt.ylabel(\"Net Debt to Cash Flow Ratio\")\n",
     "\n",
     "plt.title(\"Long Term Solvency Ratios - RRL\")\n",
     "\n",
-    "lns = nic_rrl+ndcf_rrl\n",
+    "lns = nic_rrl#+ndcf_rrl\n",
     "labs = [l.get_label() for l in lns]\n",
     "\n",
     "plt.legend(lns, labs, bbox_to_anchor=(1.15,1), loc=\"upper left\")\n",
@@ -143,16 +143,16 @@
     "plt.xlabel(\"Year\")\n",
     "plt.ylabel(\"Gross Gearing (D/E) Ratio\")\n",
     "\n",
-    "ax2 = ax.twinx()\n",
+    "# ax2 = ax.twinx()\n",
     "\n",
-    "fl_pru = ax2.plot(x_axis, solvency_ratios['PRU']['Financial Leverage'], linestyle=\"dashed\", color = 'blue', label='PRU Financial Leverage')\n",
+    "# fl_pru = ax2.plot(x_axis, solvency_ratios['PRU']['Financial Leverage'], linestyle=\"dashed\", color = 'blue', label='PRU Financial Leverage')\n",
     "\n",
     "plt.xlabel(\"Year\")\n",
-    "plt.ylabel(\"Financial Leverage Ratio\")\n",
+    "# plt.ylabel(\"Financial Leverage Ratio\")\n",
     "\n",
     "plt.title(\"Long Term Solvency Ratios - PRU\")\n",
     "\n",
-    "lns = de_pru+fl_pru\n",
+    "lns = de_pru#+fl_pru\n",
     "labs = [l.get_label() for l in lns]\n",
     "\n",
     "plt.legend(lns, labs, bbox_to_anchor=(1.15,1), loc=\"upper left\")\n",
@@ -186,16 +186,16 @@
     "plt.xlabel(\"Year\")\n",
     "plt.ylabel(\"Gross Gearing (D/E) Ratio\")\n",
     "\n",
-    "ax2 = ax.twinx()\n",
+    "# ax2 = ax.twinx()\n",
     "\n",
-    "fl_rrl = ax2.plot(x_axis, solvency_ratios['RRL']['Financial Leverage'], linestyle=\"dashed\", color = 'red', label='RRL Financial Leverage')\n",
+    "# fl_rrl = ax2.plot(x_axis, solvency_ratios['RRL']['Financial Leverage'], linestyle=\"dashed\", color = 'red', label='RRL Financial Leverage')\n",
     "\n",
     "plt.xlabel(\"Year\")\n",
-    "plt.ylabel(\"Financial Leverage Ratio\")\n",
+    "# plt.ylabel(\"Financial Leverage Ratio\")\n",
     "\n",
     "plt.title(\"Long Term Solvency Ratios - RRL\")\n",
     "\n",
-    "lns = de_rrl+fl_rrl\n",
+    "lns = de_rrl#+fl_rrl\n",
     "labs = [l.get_label() for l in lns]\n",
     "\n",
     "plt.legend(lns, labs, bbox_to_anchor=(1.15,1), loc=\"upper left\")\n",
