Added financial year

--- a/Liquidity/liquidityPlot.ipynb
+++ b/Liquidity/liquidityPlot.ipynb
@@ -61,7 +61,7 @@
     "ax.plot(x_axis, liquidity_ratios['RRL']['Current Ratio'], color = 'red', label='RRL Current Ratio')\n",
     "ax.plot(x_axis, liquidity_ratios['RRL']['Quick Ratio'], linestyle=\"dashed\", color = 'red', label='RRL Quick Ratio')\n",
     "\n",
-    "plt.xlabel(\"Year\")\n",
+    "plt.xlabel(\"Financial Year\")\n",
     "plt.ylabel(\"Ratio\")\n",
     "\n",
     "plt.title(\"Short Term Liquidity Ratios\")\n",
@@ -99,7 +99,7 @@
     "ax.plot(x_axis, liquidity_figures['RRL']['Current Assets'], color = 'red', label='RRL Current Assets')\n",
     "ax.plot(x_axis, liquidity_figures['RRL']['Current Liabilities'], linestyle=\"dashed\", color = 'red', label='RRL Current Liabilities')\n",
     "\n",
-    "plt.xlabel(\"Year\")\n",
+    "plt.xlabel(\"Financial Year\")\n",
     "plt.ylabel(\"AUD (m)\")\n",
     "\n",
     "plt.title(\"Short Term Liquidity Values\")\n",
