--- a/Solvency/solvencyPlot.ipynb
+++ b/Solvency/solvencyPlot.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "nic_pru = ax.plot(x_axis, solvency_ratios['PRU']['Net Interest Cover'], color = 'blue', label='PRU Net Interest Cover')\n",
     "\n",
-    "plt.xlabel(\"Year\")\n",
+    "plt.xlabel(\"Financial Year\")\n",
     "plt.ylabel(\"Net Interest Cover Ratio\")\n",
     "\n",
     "# ax2 = ax.twinx()\n",
@@ -97,7 +97,7 @@
     "\n",
     "nic_rrl = ax.plot(x_axis, solvency_ratios['RRL']['Net Interest Cover'], color = 'red', label='RRL Net Interest Cover')\n",
     "\n",
-    "plt.xlabel(\"Year\")\n",
+    "plt.xlabel(\"Financial Year\")\n",
     "plt.ylabel(\"Net Interest Cover Ratio\")\n",
     "\n",
     "# ax2 = ax.twinx()\n",
@@ -140,14 +140,14 @@
     "\n",
     "de_pru = ax.plot(x_axis, solvency_ratios['PRU']['Gross Gearing (D/E)'], color = 'blue', label='PRU Gross Gearing (D/E)')\n",
     "\n",
-    "plt.xlabel(\"Year\")\n",
+    "plt.xlabel(\"Financial Year\")\n",
     "plt.ylabel(\"Gross Gearing (D/E) Ratio\")\n",
     "\n",
     "# ax2 = ax.twinx()\n",
     "\n",
     "# fl_pru = ax2.plot(x_axis, solvency_ratios['PRU']['Financial Leverage'], linestyle=\"dashed\", color = 'blue', label='PRU Financial Leverage')\n",
     "\n",
-    "plt.xlabel(\"Year\")\n",
+    "plt.xlabel(\"Financial Year\")\n",
     "# plt.ylabel(\"Financial Leverage Ratio\")\n",
     "\n",
     "plt.title(\"Long Term Solvency Ratios - PRU\")\n",
@@ -183,7 +183,7 @@
     "\n",
     "de_rrl = ax.plot(x_axis, solvency_ratios['RRL']['Gross Gearing (D/E)'], color = 'red', label='RRL Gross Gearing (D/E)')\n",
     "\n",
-    "plt.xlabel(\"Year\")\n",
+    "plt.xlabel(\"Financial Year\")\n",
     "plt.ylabel(\"Gross Gearing (D/E) Ratio\")\n",
     "\n",
     "# ax2 = ax.twinx()\n",
@@ -223,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
